# superposition

./: .gitignore  .gitmodules  CMakeLists.txt  project.sh  setup.sh
assets/shaders/: basic.frag  basic.vert  pbr.frag  phong.frag  phong.vert  post_process.frag
src/: main.cpp
src/Core/include/: Application.hpp  AssetManager.hpp  Space.hpp  SpaceManager.hpp
src/Core/src/: Application.cpp  AssetManager.cpp  Space.cpp  SpaceManager.cpp
src/ECS/include/: ComponentManager.hpp  Coordinator.hpp  EntityManager.hpp  System.hpp  SystemManager.hpp  Types.hpp
src/ECS/src/: ComponentManager.cpp  Coordinator.cpp  EntityManager.cpp  SystemManager.cpp  SystenManager.cpp
src/Renderer/include/: Framebuffer.hpp  Mesh.hpp  Shader.hpp  Texture.hpp
src/Renderer/src/: Framebuffer.cpp  Mesh.cpp  Shader.cpp  Texture.cpp
src/Systems/include/: InputSystem.hpp  PhysicsSystem.hpp  PlayerControlSystem.hpp  RenderSystem.hpp
src/Systems/src/: InputSystem.cpp  PhysicsSystem.cpp  PlayerControlSystem.cpp  RenderSystem.cpp
tests/: ComponentManagerTest.cpp  CoordinatorTest.cpp  EntityManagerTest.cpp  PhysicsSystemTest.cpp  SystemManagerTest.cpp
